fix: Change jpg background to webp on mobiles

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -12,6 +12,11 @@
   background-size: cover, cover;
   z-index: 1;
 }
+@media (max-width: 900px) {
+  .hero {
+    background-image: url("/images/index-bg-mobile.webp"), url("/images/index-bg-mobile.jpg");
+  }
+}
 .hero::before {
   content: "";
   position: absolute;
@@ -24,19 +29,19 @@
   font-family: "PlayfairDisplay", san-serif;
   font-size: clamp(1.8rem, 1rem + 2.5vw, 5rem);
   font-weight: normal;
-  margin-top: 23vh;
+  margin-top: 25vh;
   text-transform: uppercase;
 }
 .hero__paragraph {
-  font-size: clamp(1rem, 0.3rem + 1vw, 2rem);
+  font-size: clamp(1.1rem, 0.4rem + 1vw, 2rem);
   font-weight: lighter;
-  margin-top: 1vh;
+  margin: 2vh 0;
 }
 .hero .cta-btn {
   border: none;
   letter-spacing: 1px;
   border: 2px solid #ecc96e;
-  padding: 0.5rem 1.2rem;
+  padding: 0.5rem 1rem;
   transition: all 0.3s ease-in-out;
 }
 @media (max-width: 900px) {
@@ -77,6 +82,7 @@
 .nav-bar {
   justify-content: space-between;
   align-items: center;
+  margin-top: 1rem;
 }
 
 @media (max-width: 900px) {
@@ -97,6 +103,7 @@
   width: 50px !important;
   height: 40px;
   cursor: pointer;
+  z-index: 5;
 }
 
 .languages {
@@ -127,7 +134,9 @@
   position: absolute;
   right: 15vw;
   bottom: 5vh;
-  font-size: clamp(1rem, 0.5rem + 1vw, 2rem);
+  font-size: clamp(0.9rem, 0.4rem + 1vw, 2rem);
+  font-weight: lighter;
+  opacity: 0.8;
 }
 @media (max-width: 575px) {
   .latin {
